k8s/mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: ml-factory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow

          image: ml-factory-mlflow:latest
          imagePullPolicy: IfNotPresent
          args:
            - "mlflow"
            - "server"
            - "--backend-store-uri=$(MLFLOW_BACKEND_STORE_URI)"
            - "--artifacts-destination=$(MLFLOW_DEFAULT_ARTIFACT_ROOT)"
            - "--host=0.0.0.0"
            - "--port=5001"

          ports:
            - name: http
              containerPort: 5001

          volumeMounts:
            - name: mlflow-backend
              mountPath: /mlflow/db

      volumes:
        - name: mlflow-backend
          persistentVolumeClaim:
            claimName: mlflow-backend
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: ml-factory
spec:
  selector:
    app: mlflow
  ports:
    - name: http
      port: 5001
      targetPort: http
  type: ClusterIP
