k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-factory-ingress
  namespace: ml-factory
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ml-factory.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /dataset_management
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
